Dark mode fixed

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #e6eaf2;
+    color: #222;
+}
+
 .text-box {
     border-radius: 6px;
     padding: 12px;
@@ -6,6 +11,8 @@
 .header {
     height: 80px;
     padding: 8px;
+    background-color: #c2c5cc;
+    color: #222;
 }
 
 .footer {
@@ -13,15 +20,17 @@
     margin-top: 5%;
     flex-grow: 1;
     border-top: 1px solid #c2c5cc;
+    background-color: #dfe1e6;
+    color: #222;
 }
 
-.dark-mode-button {
+.theme-button {
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 32px;
+    height: 32px;
     padding: 4px;
 }
-.dark-mode-button:hover {
+.theme-button:hover {
     background-color: #a1a6b3;
 }
 
@@ -34,7 +43,7 @@
     font-size:xx-large;
     margin: 4px;
     text-decoration: none;
-    color: #6b81b3;
+    color: #b37d7d;
     display: block;
     border-radius: 8px;
 }
@@ -44,7 +53,7 @@
 }
 
 .social-icon {
-    filter: invert(70%) sepia(9%) saturate(5413%) hue-rotate(191deg) brightness(75%) contrast(80%);
+    filter: invert(56%) sepia(23%) saturate(508%) hue-rotate(314deg) brightness(93%) contrast(89%);
 }
 .social-icon:hover {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
